# ai-image-renamer

./: .gitignore  CLAUDE.md  COMPARISON.md  LICENSE  README.md  REFACTORING.md  __init__.py  image_renamer.py  image_renamer_old.py  main.py  pyproject.toml  test_models.py
src/image_renamer/: __init__.py  __main__.py  cli.py  file_renamer.py  image_processor.py  models.py  ollama_client.py  performance_tracker.py
