[project]
name = "image-renamer"
version = "0.1.0"
description = "AI-powered image renaming tool with structured outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "AI Image Renamer Contributors"},
]
keywords = ["ai", "ollama", "image-processing", "pydantic", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.1.0",
    "pillow>=10.0.0",
    "requests>=2.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
image-renamer = "image_renamer.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/image-renamer"
Repository = "https://github.com/yourusername/image-renamer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
